[gd_scene load_steps=5 format=3 uid="uid://djv6fo0uh0nh7"]

[ext_resource type="Script" path="res://main.gd" id="1_x5k7q"]
[ext_resource type="PackedScene" uid="uid://dhxoytim3au6d" path="res://BG.tscn" id="2_cqpsa"]
[ext_resource type="Script" path="res://ui_control.gd" id="3_riq2g"]
[ext_resource type="Script" path="res://Levels.gd" id="4_sdw6k"]

[node name="Main" type="Node2D"]
position = Vector2(418, 302)
script = ExtResource("1_x5k7q")

[node name="BG" parent="." instance=ExtResource("2_cqpsa")]

[node name="Main_buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_riq2g")
metadata/_edit_lock_ = true

[node name="Play" type="Button" parent="Main_buttons"]
layout_mode = 0
offset_left = 54.0
offset_top = -126.0
offset_right = 261.0
offset_bottom = -45.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Play"

[node name="Levels" type="Button" parent="Main_buttons"]
layout_mode = 0
offset_left = 54.0
offset_top = -14.0
offset_right = 261.0
offset_bottom = 67.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Level Select"

[node name="Quit" type="Button" parent="Main_buttons"]
layout_mode = 0
offset_left = 54.0
offset_top = 106.0
offset_right = 261.0
offset_bottom = 187.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit"
metadata/_edit_use_anchors_ = true

[node name="Levels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_sdw6k")

[node name="Back" type="Button" parent="Levels"]
layout_mode = 0
offset_left = -364.0
offset_top = -254.0
offset_right = -168.0
offset_bottom = -211.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Back"

[node name="Level 1" type="Button" parent="Levels" groups=["Levels"]]
layout_mode = 0
offset_left = -289.0
offset_top = -174.0
offset_right = -82.0
offset_bottom = -93.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 1"

[node name="Level 2" type="Button" parent="Levels"]
layout_mode = 0
offset_left = -289.0
offset_top = -38.0
offset_right = -82.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 2"

[node name="Level 3" type="Button" parent="Levels" groups=["Levels"]]
layout_mode = 0
offset_left = -289.0
offset_top = 106.0
offset_right = -82.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 3"

[node name="Level 4" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 38.0
offset_top = -174.0
offset_right = 245.0
offset_bottom = -93.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 4"

[node name="Level 5" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 38.0
offset_top = -30.0
offset_right = 245.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 5"

[node name="Level 6" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 38.0
offset_top = 106.0
offset_right = 245.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 6"

[node name="Level 7" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 352.0
offset_top = -174.0
offset_right = 559.0
offset_bottom = -93.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 7"

[node name="Level 8" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 352.0
offset_top = -30.0
offset_right = 559.0
offset_bottom = 51.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 8"

[node name="Level 9" type="Button" parent="Levels"]
layout_mode = 0
offset_left = 352.0
offset_top = 106.0
offset_right = 559.0
offset_bottom = 187.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Level 9"

[connection signal="pressed" from="Main_buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main_buttons/Levels" to="Main_buttons" method="_on_levels_pressed"]
[connection signal="pressed" from="Main_buttons/Levels" to="Levels" method="_on_levels_pressed"]
[connection signal="pressed" from="Main_buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Levels/Back" to="Main_buttons" method="_on_back_pressed"]
[connection signal="pressed" from="Levels/Back" to="Levels" method="_on_back_pressed"]
[connection signal="pressed" from="Levels/Level 1" to="Levels" method="_on_level_1_pressed"]
[connection signal="pressed" from="Levels/Level 2" to="Levels" method="_on_level_2_pressed"]
[connection signal="pressed" from="Levels/Level 3" to="Levels" method="_on_level_3_pressed"]
[connection signal="pressed" from="Levels/Level 4" to="Levels" method="_on_level_4_pressed"]
[connection signal="pressed" from="Levels/Level 5" to="Levels" method="_on_level_5_pressed"]
[connection signal="pressed" from="Levels/Level 6" to="Levels" method="_on_level_6_pressed"]
[connection signal="pressed" from="Levels/Level 7" to="Levels" method="_on_level_7_pressed"]
[connection signal="pressed" from="Levels/Level 8" to="Levels" method="_on_level_8_pressed"]
[connection signal="pressed" from="Levels/Level 9" to="Levels" method="_on_level_9_pressed"]
